# Game_Analyzer

./: package.json
src/: App.svelte
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: db.rs  game_data.rs  main.rs  server.rs  write_config.rs
src/lib/: Greet.svelte
